# aws_openshift_role_assume

./: .gitignore  README.md  test_s3_access.ipynb
aws_openshift_role_assume/: LICENSE  README.md  pyproject.toml
aws_openshift_role_assume/aws_openshift_role_assume/: __init__.py  aws.py  config.py  identity.py
examples/: README.md  irsa-base-policy.json  irsa-trust-policy.json  poddefault-irsa.yaml  s3_policy.json  sa.yaml  target-s3-policy.json  target-trust-policy.json
